--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -13,6 +13,13 @@
   .publication-box__min
     height: 70px
 
+  .information-box
+    margin: 0 0 20px
+
+  .user-menu
+    margin: 0 0 30px
+
+
 
 /* Small Devices, Tablets */
 @media only screen and (max-width: 900px)
@@ -104,6 +111,9 @@
     .profile-info__links
       font-size: 16px
 
+  .delete-user .btn
+    margin: 10px auto 0
+
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 670px)
   .form-search
@@ -136,6 +146,8 @@
     align-items: flex-start
     .price
       margin: 10px 0 0
+
+
 
 @media only screen and (max-width: 576px)
   .header-bottom
@@ -238,3 +250,15 @@
       font-size: 15px
     button
       width: 50px
+
+  .bookmarks-box h3
+    font-size: 16px
+
+  .bookmarks-box .price
+    font-size: 15px
+    span
+      font-size: 11px
+
+  .user-page h1
+    font-size: 18px
+
