--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -114,6 +114,9 @@
   .delete-user .btn
     margin: 10px auto 0
 
+  .table
+    font-size: 16px
+
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 670px)
   .form-search
@@ -204,6 +207,13 @@
   .card-product
     padding: 15px
 
+  .table
+    font-size: 15px
+    min-width: 600px
+
+  .prices-section h2
+    margin: 0 0 30px
+
 /* Custom, iPhone Retina */
 @media only screen and (max-width: 480px)
   .input-title
@@ -225,6 +235,9 @@
     &__body
       width: 100%
       padding: 10px 0 0
+
+  .product-card, .publication-slider .publication-box
+    width: 100%
 
 @media only screen and (max-width: 420px)
   .input-title
