--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1521,10 +1521,11 @@ footer {
   text-align: center;
   max-width: 120px;
   width: 100%;
-  font-size: 12px;
+  font-size: 20px;
   margin: 0 auto;
-  font-weight: 700; }
-  .providers-box h3 {
+  font-weight: 700;
+  color: #000; }
+  .providers-box__title {
     line-height: 2; }
   .providers-box__img {
     width: 120px;
@@ -1546,6 +1547,8 @@ footer {
       height: 100%;
       -o-object-fit: cover;
          object-fit: cover; }
+  .providers-box:hover {
+    color: #FF8800; }
 
 .prices-section {
   margin: 27px 0 50px; }
@@ -1572,6 +1575,9 @@ footer {
       text-align: center; }
   .table .btn {
     margin: 0 auto; }
+
+.links-favorite.active .svg-icon {
+  fill: #FF8800; }
 
 .check-item {
   fill: none;
