--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1368,11 +1368,13 @@ footer
   text-align: center
   max-width: 120px
   width: 100%
-  font-size: 12px
+  font-size: 20px
   margin: 0 auto
   font-weight: 700
-  h3
+  color: #000
+  &__title
     line-height: 2
+
   &__img
     width: 120px
     height: 120px
@@ -1386,6 +1388,8 @@ footer
       width: 100%
       height: 100%
       object-fit: cover
+  &:hover
+    color: $accent
 
 //prices-section
 .prices-section
@@ -1414,6 +1418,11 @@ footer
         text-align: center
   .btn
     margin: 0 auto
+
+.links-favorite.active
+  .svg-icon
+    fill: $accent
+
 
 .check-item
   fill: none
