--- a/app/css/main.css
+++ b/app/css/main.css
@@ -288,9 +288,9 @@ strong {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -342,6 +342,77 @@ strong {
   height: 24px;
   margin: 0 0 0 10px;
   stroke: #FF8800; }
+
+.dropdown-item-menu:hover .dropdown-menu {
+  display: block; }
+
+.dropdown-menu {
+  margin: 0;
+  border: none;
+    border-radius: 0;
+  padding: 30px;
+  display: none;
+  -webkit-box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3); }
+
+.dropdown-menu-wrapper {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
+
+.dropdown-menu-col {
+  padding: 0 10px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1; }
+  .dropdown-menu-col h3 {
+    margin: 0 0 30px;
+    font-size: 24px; }
+  .dropdown-menu-col h4 {
+    color: #FF8800;
+    font-size: 20px;
+    margin: 0 0 20px; }
+
+.dropdown-menu-img {
+  width: 100%;
+  height: 180px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  overflow: hidden; }
+  .dropdown-menu-img img {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover; }
+
+.submenu {
+  font-size: 12px;
+  padding: 0 0 0 10px; }
+  .submenu li {
+    border-bottom: 1px solid #ccc; }
+    .submenu li:after {
+      display: none; }
+    .submenu li:last-child {
+      border: none; }
+    .submenu li a {
+      padding: 5px 0;
+      color: #000; }
+      .submenu li a:hover {
+        color: #FF8800; }
 
 footer {
   -webkit-box-flex: 0;
@@ -1717,7 +1788,16 @@ footer {
   .delete-user .btn {
     margin: 10px auto 0; }
   .table {
-    font-size: 16px; } }
+    font-size: 16px; }
+  .dropdown-menu-col h4 {
+    margin: 0 0 15px;
+    font-size: 14px; }
+  .dropdown-menu-col h3 {
+    font-size: 20px;
+    margin: 0 0 20px; }
+  .submenu {
+    font-size: 10px;
+    padding: 0; } }
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 670px) {
